<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">7elol</string>
    <string name="action_settings">Settings</string>
    <string name="simpleText">simpleText</string>
    <string name="ip">127.0.0.1</string>
    <string name="port">5000</string>
    <string name="speak">Speak</string>
    <string name="Send">Send</string>
    <string name="Configure">Configure</string>
    <string name="IpLabel">Enter IP</string>
    <string name="PortLabel">Enter Port</string>
    <string name="SetBtn">Set</string>
    <string name="pref_conn">Connection Settings</string>
    <string name="pref_ip_address">Set IP Address</string>
    <string name="pref_ip_address_summary">set IP connection</string>
    <string name="pref_port_num">Set port num</string>
    <string name="pref_port_num_summary">set port number to send data</string>
    <string name="pref_auto_detect">auto detect IP Address</string>
    <string name="pref_auto_detect_summary">auto detect IP connection</string>
    <string name="pref_edit_before_send">Edit Before Send</string>
    <string name="pref_edit_before_send_summary">Edit speech before Send</string>
    <string name="menu_settings">Settings</string>
    
    <string name="title_activity_login">7elolRemote</string>
    <string name="hello_world">Hello world!</string>
    <string name="logo">logo</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="register">New to 7elol? Register here</string>
    <string name="Show">Show</string>
    <string name="Hide">Hide</string>
    <string name="ToggleFloorOne">ToggleFloorOne</string>
    <string name="ToggleFloorTwo">ToggleFloorTwo</string>
    <string name="ShowFloorOne">Show floor one controls</string>
    <string name="ShowFloorTwo">Show Floor two controls</string>
    <string name="HideFloorOne">Hide floor one controls</string>
    <string name="HideFloorTwo">Hide Floor two controls</string>
    <color name="mainColor">#e9d9a8</color>
    <string name="LightControl1">control Light One</string>
    <string name="LightControl2">control Light Two</string>
    <string name="LightControl3">control Light Three</string>
    <string name="LightControl4">control Light Four</string>
    <string name="normal">Normal</string>
    <string name="alert">Alert</string>
    <color name="alertColor">#EE3B3B</color>
    <color name="normalColor">#228B22</color>
    

</resources>
