<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    
    tools:context=".LoginActivity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff" >

        <!-- Header Starts -->

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

            <!-- logo starts -->

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dip"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo_72px" />

            <!-- logo ends -->
        </LinearLayout>
        <!-- Header Ends -->


       


        <!-- login form -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/header"
            android:background="@color/mainColor"
            android:orientation="vertical"
            android:padding="10dip" >

            <!-- Email Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
            <!-- Password Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:inputType="textPassword"
                android:singleLine="true" />
            <!-- Login button -->

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/login"
                android:onClick="onClick" />
            <!-- Link to Registration Screen -->

        </LinearLayout>

        <!-- login form ends -->
        
         <!-- Footer Starts -->
        <!-- place footer next to header to set z-index property to minus value -->

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="90dip"
            android:layout_alignParentBottom="true"
            android:background="@layout/footer_repeat"
             >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:contentDescription="@string/logo"
                android:scaleType="fitXY"
                android:src="@drawable/footer_logo" />
        </LinearLayout>
        <!-- Footer Ends -->

    </RelativeLayout>

</ScrollView>